@@ -24,7 +24,7 @@ module NewRelic
         to_stdout msg
         log.send level, msg if @log
       end
-
+      
       def should_log?
         @settings && agent_enabled?
       end
@@ -32,25 +32,25 @@ module NewRelic
       # Control subclasses may override this, but it can be called multiple times.
       def setup_log
         @log_file = "#{log_path}/#{log_file_name}"
-        @log = Logger.new @log_file
+        @log = Logger.new(@log_file) rescue nil
         
         # change the format just for our logger
-        
-        def @log.format_message(severity, timestamp, progname, msg)
+
+        def log.format_message(severity, timestamp, progname, msg)
           "[#{timestamp.strftime("%m/%d/%y %H:%M:%S %z")} #{Socket.gethostname} (#{$$})] #{severity} : #{msg}\n" 
         end
-        
-        # set the log level as specified in the config file
 
+        # set the log level as specified in the config file
+        
         case fetch("log_level","info").downcase
-        when "debug" then @log.level = Logger::DEBUG
-        when "info" then @log.level = Logger::INFO
-        when "warn" then @log.level = Logger::WARN
-        when "error" then @log.level = Logger::ERROR
-        when "fatal" then @log.level = Logger::FATAL
-        else @log.level = Logger::INFO
+          when "debug" then log.level = Logger::DEBUG
+          when "info" then log.level = Logger::INFO
+          when "warn" then log.level = Logger::WARN
+          when "error" then log.level = Logger::ERROR
+          when "fatal" then log.level = Logger::FATAL
+        else log.level = Logger::INFO
         end
-        @log
+        log
       end
       
       def to_stdout(msg)
@@ -58,19 +58,14 @@ module NewRelic
       end
       
       def log_path
-        @log_path ||= begin
-                        path = fetch('log_file_path', 'log/')
-                        unless path && File.directory?(path)
-                          log!("Error locating New Relic log path - please make sure #{path} exists", :error)
-                          path = 'log/'
-                          log!("New Relic log in default location: #{path}", :warn)
-                        else
-                          log! "New Relic log in #{path}"
-                        end
-                        File.expand_path(path)
-                      end
+        return if @log_path
+        @log_path = File.expand_path(fetch('log_file_path', 'log/'))
+        if !File.directory?(@log_path) && ! (Dir.mkdir(@log_path) rescue nil) 
+          log!("Error creating New Relic log directory '#{@log_path}'", :error)
+        end
+        @log_path
       end
-
+      
       def log_file_name
         fetch('log_file_name', 'newrelic_agent.log')
       end
